<resources>
    <string name="app_name">IRMA</string>
    <string name="app_name_enroll">IRMA Document Enrollment</string>
    <string name="irmalogo">IRMA logo</string>
	<string name="credential_info">IRMA app</string>
    <string name="feedback_waiting_for_passport">Waiting for Document</string>
    <string name="feedback_communicating_passport">Communicating with Passport…</string>
    <string name="title_credential_detail">Credential Detail</string>
    <string name="title_log">Log</string>
	<string name="status_idle">Tap to scan QR</string>
	<string name="status_connecting">Connecting…</string>
	<string name="status_connected">Connected to server</string>
	<string name="status_ready">Ready</string>
	<string name="status_communicating">Communicating…</string>
	<string name="status_waitingforpin">Waiting for PIN</string>
    <string name="se_welcome">IRMA self enrollment</string>
    <string name="se_connect_mno"><![CDATA[
    This process consists of the following three steps: <br/><br/>
    &nbsp;&nbsp;1.&nbsp;&nbsp;Entering some data from your document; <br/>
    &nbsp;&nbsp;2.&nbsp;&nbsp;Reading data from your document; <br/>
    &nbsp;&nbsp;3.&nbsp;&nbsp;Issuing the credential. <br/><br/>
    During the final process, your name, date and place of birth will be transmitted to the enrollment server, but these will not be stored by the server.
    <br/><br/>
    Proceed?
    ]]></string>
    <string name="se_continue">Continue</string>
    <string name="back">Back</string>
    <string name="abort">Abort</string>
    <string name="retry">Retry</string>
    <string name="se_connected_mno">Connected to server</string>
    <string name="se_connecting_mno">Connecting to server…</string>
    <string name="se_connected_mijnoverheid">Connected to server</string>
    <string name="feedback_issueing">Issuing credentials…</string>
    <string name="done">Done.</string>
    <string name="clear_card">Delete all attributes</string>
    <string name="step_string">Step %d</string>
    <string name="enroll_error_label">Self enrollment failed</string>
    <string name="error_nfc_notsupported">This phone does not support NFC.</string>
    <string name="error_nfc_disabled">NFC is disabled. Please enable NFC in the phone settings before using this
        feature.</string>
    <string name="error_enroll_issuing_failed">The issuing of the credential failed.</string>
    <string name="error_enroll_cantconnect">Could not connect to the enrollment server.</string>
    <string name="error_enroll_serverdied">The server encountered a problem and aborted.</string>
    <string name="error_enroll_invalidresponse">The enrollment server returned an invalid response.</string>
    <string name="error_enroll_passporterror">Failed to establish contact with the passport.</string>
    <string name="error_enroll_edlerror">Failed to establish contact with the driving license.</string>
    <string name="error_enroll_bacfailed">The document data you supplied seems to be wrong.</string>
    <string name="error_enroll_passportrejected">Could not establish passport validity.</string>
    <string name="error_enroll_passport_expired">You cannot enroll with an expired identity document.</string>
    <string name="unknown_error">The following error occurred: %1$s</string>
    <string name="enroll_enter_bac_title">Document data</string>
    <string name="enroll_enter_bac_desc">Please select the identity document you wish to use, and provide the requested data to allow the app to communicate with the document.</string>
    <string name="menu_show_log">Show log</string>
    <string name="no_credentials">You don\'t have any credentials yet.</string>
    <string name="enroll">Document Enroll</string>
    <string name="online_enroll">Demo Enroll</string>
    <plurals name="disclose_question_1">
		<item quantity="one">The following attribute will be sent to the verifier.</item>
		<item quantity="other">The following attributes will be sent to the verifier.</item>
    </plurals>
    <plurals name="disclose_question_named">
        <item quantity="one"><![CDATA[The following attribute will be sent to the verifier <b>%s</b>.]]></item>
        <item quantity="other"><![CDATA[The following attributes will be sent to the verifier <b>%s</b>.]]></item>
    </plurals>
    <string name="disclose_question_2">Are you sure you want to disclose these attributes?</string>
    <string name="sign_question_0">The following message will be signed:</string>
    <string name="sign_question_0_named"><![CDATA[The following message will be signed and sent to <b>%s</b>:]]></string>
    <plurals name="sign_question_1">
        <item quantity="one">With the following attribute:</item>
        <item quantity="other">With the following attributes:</item>
    </plurals>
    <string name="sign_question_2">Are you sure you want to sign this message with these attributes?</string>
    <string name="or">or enter</string>
    <string name="feedback_communicating_driverslicense">Communicating with drivers license</string>
    <string name="error_enroll_driverslicense_error">Failed to establish contact with drivers license</string>
    <string name="preferences">Preferences</string>
    <string name="delete_scheme_manager">Delete scheme manager</string>
    <string name="scheme_managers">Scheme Managers</string>
    <string name="scheme_managers_summary">View, add or remove scheme managers</string>
    <string name="add_new">Add new</string>
    <string name="add_new_scheme_manager">Add new scheme manager</string>
    <string name="enter_scheme_manager_url">Enter the URL of the scheme manager</string>
    <string-array name="document_list">
        <item>Passport / ID card</item>
        <item>Drivers License</item>
    </string-array>
    <string name="title_activity_scheme_manager_detail">Scheme Manager Details</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="description">Description:</string>
    <string name="contact">Contact:</string>
    <string name="diclosure_information">Disclosure Information</string>
    <string name="disclosure_info">For each of the categories listed below, the verifier accepts one of the following attributes. The icons indicate if you do or do not have this attribute.</string>
    <string name="disclosure_issuance_info">The issuer has requested that you disclose some attributes before the issuance can take place. For each of the categories listed below, it accepts one of the following attributes. The icons indicate if you do or do not have this attribute (and if it has the appropriate value, if applicable).</string>
    <string name="dismiss">Dismiss</string>
    <string name="techinfo">Technical info</string>
    <string name="lessinfo">Less info</string>
    <string name="exit">Exit</string>
    <string name="cantreadattributes">Could not read attributes</string>
    <string name="cantreadattributes_long">A problem occurred when attempting to read your attributes from storage. In order to prevent your attributes from being lost, you should exit the app now. If you press continue, your attributes will be lost.
    </string>
    <string name="manual_session">Manual session</string>
    <string name="start">Start</string>
    <string name="allow_screenshots">Allow screenshots</string>
    <string name="allow_screenshots_long">Whether or not to allow screenshots to be made</string>
    <string name="screenshots">Screenshots</string>
    <string name="screenshots_long">Allow or disallow screenshots</string>
    <string name="issuer_question">An issuer wants to issue the following attributes to you.</string>
    <string name="issuer_named_question"><![CDATA[Issuer <b>%s</b> wants to issue the following attributes to you.]]></string>
    <string name="issue_question_attributes">However, the following attributes will be sent to the issuer during issuance.</string>
    <string name="issue_question_attributes_2">Disclose these attributes and continue issuance?</string>
    <string name="continue_issuance">Continue issuance?</string>
    <string name="actorlogo" translatable="false">Actor Logo</string>
    <string name="actionimage" translatable="false">Action Image</string>
    <string name="irmashape">GUI artifact</string>
    <string name="issuerlogo">Issuer Logo</string>
    <string name="validtill" translatable="false">Valid until:</string>
    <string name="issuer">Issuer</string>
    <string name="credentialdescription">Credential Description</string>
    <string name="deletetext">Delete</string>
    <string name="credential_no_longer_valid">No longer valid</string>
    <string name="no_logs_available">No log items found</string>
    <string name="error_logs_not_read">Log could not be read</string>
    <string name="schememanager">Scheme Manager</string>
    <string name="confirm_delete_question">Are you sure you want to delete this credential? This cannot be undone.</string>
    <string name="confirm_delete_title">Deleting credential</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="disclosure_successful">Successfully disclosed attributes</string>
    <string name="issuing_succesful">Issuing was successful</string>
    <string name="disclosure_cancelled">Cancelled disclosure</string>
    <string name="issuing_cancelled">Cancelled issuing</string>
    <string name="disclosure_failed">Disclosure failed</string>
    <string name="issuing_failed">Issuing failed</string>
    <string name="failed">Failed</string>
    <string name="confirm_delete_all_title">Delete all credentials?</string>
    <string name="confirm_delete_all_question">Are you sure you want to delete all attributes?</string>
    <string name="confirm_delete_all_kss">This will also unregister you from MyIRMA.\n\nNote:
        if you would like to re-register using the same email address,
        you will need to delete your MyIRMA account at the MyIRMA website.</string>
    <string name="downloading_credential_info_failed">Downloading credential info failed</string>
    <string name="scan_qr">Scan the QR image.</string>
    <string name="qr_code_contents">QR code contents</string>
    <string name="manually_start_session">Manually start IRMA session</string>
    <string name="validity_days_remaining">%d days remaining</string>
    <string name="receive_attributes">Receive attributes?</string>
    <string name="disclose_attributes">Disclose attributes?</string>
    <string name="sign_attributes">Sign using attributes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more_information">More Information</string>
    <string name="posession_credential">possession of credential</string>
    <string name="verified">Verified</string>
    <string name="signed">Signed</string>
    <string name="message">Message: %s</string>
    <string name="disclosed">disclosed</string>
    <string name="hidden">hidden</string>
    <string name="removed">Removed</string>
    <string name="issued">Issued</string>
    <string name="issued_by">Issued by</string>
    <string name="remove_schememanager_title">Remove scheme manager?</string>
    <string name="pinhint">PIN</string>
    <string name="keyshare_enroll_description"><![CDATA[
        To use credentials associated to the %s scheme manager,
        you need to enter your email address and a PIN code to register with its MyIRMA website.<br/>
        <b>Important:</b> Carefully remember your PIN! You will need to enter it each time
        you use attributes from this scheme manager. If you forget it, your attributes become unusable.]]></string>
    <string name="email_address">Email address</string>
    <string name="menu_reregister">Redo registration</string>
</resources>