<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      tools:context=".MainActivity">

    <item
        android:id="@+id/preferences"
        android:orderInCategory="100"
        android:title="@string/preferences" />

    <item
        android:id="@+id/show_card_log"
        android:orderInCategory="102"
        android:title="@string/menu_show_log"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_history"/>

    <item
        android:id="@+id/menu_reregister"
        android:orderInCategory="103"
        android:title="@string/menu_reregister"
        android:showAsAction="never"
        android:icon="@drawable/ic_action_history"/>

    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/clear_card"/>

    <item
        android:id="@+id/menu_manual_session"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/manual_session" />

    <item
        android:id="@+id/menu_delete_everything"
        android:orderInCategory="108"
        android:showAsAction="never"
        android:title="Remove everything" />

    <item
        android:id="@+id/online_enroll"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/online_enroll"/>

</menu>

