<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:padding="@dimen/detail_medium_vspace"
                  android:id="@+id/dialog_keyshare_enroll">

        <TextView
            android:text="Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/keyshare_enroll_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginBottom="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/keyshare_enroll_description"
            android:id="@+id/keyshare_enroll_text"
            android:paddingBottom="@dimen/detail_small_vspace"/>

        <EditText
            android:id="@+id/emailaddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pincode"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pinhint" />

    </LinearLayout>
</ScrollView>
